# boinc-autodock-vina

./: .codecov.yml  .gitignore  README.md  build.py  coverity-model.cpp  prepare_release.py
.github/workflows/: android.yml  codeql.yml  coverity.yml  linux.yml  maintenance.yml  osx.yml  windows.yml
boinc-autodock-vina/: CMakeLists.txt  README.md  SETUP.md  vcpkg.json
boinc-autodock-vina/samples/basic_docking/: 1iep_ad4.json  1iep_vina.json  1iep_vinardo.json
boinc-autodock-vina/samples/basic_docking_full/: 1iep_vina.json
boinc-autodock-vina/samples/basic_docking_full_generator_test/: 1iep_vina.json  1iep_vina_copy.json
boinc-autodock-vina/src/: boinc-autodock-vina.cpp  config-validator.cpp  config.cpp  config.h  example.json  main.cpp  schema.json  unit-tests.cpp
boinc-autodock-vina/src/boinc-autodock-vina/: boinc-autodock-vina.cpp  calculate.cpp  calculate.h
boinc-autodock-vina/src/common/: config.cpp  config.h  zip-create.cpp  zip-create.h
boinc-autodock-vina/src/config-validator/: config-validator.cpp
boinc-autodock-vina/src/unit-tests/: config-tests.cpp  dummy-ofstream.cpp  dummy-ofstream.h  input-config-tests.cpp  unit-tests.cpp  zip-extract.cpp
boinc-autodock-vina/src/work-generator/: input-config.cpp  input-config.h  temp-folder.cpp  temp-folder.h  work-generator.cpp
boinc-autodock-vina/src/wu-validator/: boinc-autodock-vina_wu-validator.py
common/src/jsoncons_helper/: jsoncons_helper.cpp  jsoncons_helper.h
common/src/unit-tests/: jsoncons_helper_tests.cpp
common/src/zip_helper/: zip-extract.cpp  zip-extract.h
deploy/: cleanup_vcpkg_archive_cache.py  manage_vcpkg_archive_cache.py  s3.py
vcpkg_custom_ports/autodock-vina/: 03-add-progress-callback.patch  portfile.cmake
vcpkg_custom_ports/boinc/: CMakeLists.txt
vcpkg_triplets/ci/: arm-android-static.cmake  arm-linux-static.cmake  arm-neon-android-static.cmake  arm-neon-linux-static.cmake  arm64-android-static.cmake  arm64-linux-static.cmake  arm64-osx-static.cmake  armneon-linux-static.cmake  x64-android-static.cmake  x64-linux-static.cmake  x64-osx-static.cmake  x64-windows-static.cmake  x86-android-static.cmake  x86-linux-static.cmake  x86-windows-static.cmake
vcpkg_triplets/default/: arm-linux-static.cmake  arm-neon-android-static.cmake  arm64-android-static.cmake  arm64-linux-static.cmake  arm64-osx-static.cmake  armneon-linux-static.cmake  x64-android-static.cmake  x64-linux-static.cmake  x64-osx-static.cmake  x64-windows-static.cmake  x86-android-static.cmake  x86-linux-static.cmake  x86-windows-static.cmake
